[package]
name = "plonk"
description = "An experimental arkworks-based PLONK/PLOOKUP implementation"
license = "MIT/Apache-2.0"
version = "0.0.1"
edition = "2018"

[features]
default = ["std"]
std = ["ark-ff/std", "ark-std/std", "ark-poly/std", "ark-poly-commit/std"]
parallel = ["std", "rayon", "ark-ff/parallel", "ark-std/parallel", "ark-poly/parallel", "ark-poly-commit/parallel"]

[dependencies]
rayon = { version = "1", optional = true }
rand_core = { version = "0.5", optional = false }

ark-ff = { version = "0.3", default-features = false }
ark-std = { version = "0.3", default-features = false }
ark-poly = { version = "0.3", default-features = false }
ark-poly-commit = { version = "0.3", default-features = false }


[dev-dependencies]
ark-bn254 = {version = "0.3.0", default-features = false, features = ["curve"]}
